--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/chapter*
 build/_build
 build/img
 build/environment.yml
-build/gluonbook
+build/d2lzh
 build/data
 build/README.md
 build/build
