--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ author = Aston Zhang, Zachary C. Lipton, Mu Li, and Alexander J. Smola
 
 copyright = 2019, All authors. Licensed under CC-BY-SA-4.0 and MIT-0.
 
-release = 1.1.0
+release = 1.2.0
 
 
 [build]
@@ -52,7 +52,7 @@ html_logo = static/logo-with-text.png
 [pdf]
 
 # The file used to post-process the generated tex file.
-post_latex = ./static/post_latex/main.py
+# post_latex = ./static/post_latex/main.py
 
 latex_logo = static/logo.png
 main_font = Source Serif Pro
@@ -66,8 +66,6 @@ mono_font = Inconsolata
 save_patterns = d2l/mxnet.py, mxnet
                 d2l/torch.py, pytorch
                 d2l/tensorflow.py, tensorflow
-
-version = 0.13.2
 
 version_file = d2lzh/__init__.py
 
