--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ release = 1.2.0
 
 # A list of wildcards to indicate the markdown files that need to be evaluated as
 # Jupyter notebooks.
-notebooks = *.md  */*.md
+notebooks = *.md */index.md chapter_preliminaries/ndarray.md
 
 # A list of files that will be copied to the build folder.
 resources = img/ d2lzh/ d2l.bib setup.py
