--- a/config.ini
+++ b/config.ini
@@ -2,22 +2,28 @@
 
 name = d2l-zh
 
-# Book title. It will be displayed on the top-right of the HTML page and the
-# front page of the PDF file
 title = 动手学深度学习
 
 author = Aston Zhang, Zachary C. Lipton, Mu Li, and Alexander J. Smola
 
-copyright = 2019, All authors. Licensed under CC-BY-SA-4.0 and MIT-0.
+copyright = 2020, All authors. Licensed under CC-BY-SA-4.0 and MIT-0.
 
 release = 1.2.0
 
+lang = zh
+
+[translation]
+
+origin_repo = d2l-ai/d2l-en
+origin_lang = en
+terminology = d2l-en-zh
+translator = aws
 
 [build]
 
 # A list of wildcards to indicate the markdown files that need to be evaluated as
 # Jupyter notebooks.
-notebooks = *.md */index.md chapter_preliminaries/ndarray.md
+notebooks = *.md */index.md chapter_preliminaries/*.md
 
 # A list of files that will be copied to the build folder.
 resources = img/ d2lzh/ d2l.bib setup.py
@@ -30,19 +36,18 @@ eval_notebook = True
 
 tabs = mxnet, pytorch, tensorflow
 
-origin_repo = d2l-ai/d2l-en
 [html]
 
 # A list of links that is displayed on the navbar. A link consists of three
 # items: name, URL, and a fontawesome icon
 # (https://fontawesome.com/icons?d=gallery). Items are separated by commas.
 # PDF, http://numpy.d2l.ai/d2l-en.pdf, fas fa-file-pdf,
-header_links = Courses, https://courses.d2l.ai, fas fa-user-graduate,
+header_links = 伯克利深度学习课程, https://courses.d2l.ai, fas fa-user-graduate,
                PDF, https://d2l.ai/d2l-en.pdf, fas fa-file-pdf,
-               All Notebooks, https://d2l.ai/d2l-en.zip, fas fa-download,
-               Discuss, https://discuss.d2l.ai, fab fa-discourse,
-               GitHub, https://github.com/d2l-ai/d2l-en, fab fa-github,
-               中文版, https://zh.d2l.ai, fas fa-external-link-alt
+               Jupyter 记事本文件, https://d2l.ai/d2l-en.zip, fas fa-download,
+               讨论, https://discuss.d2l.ai, fab fa-discourse,
+               GitHub, https://github.com/d2l-ai/d2l-zh, fab fa-github,
+               英文版, https://d2l.ai, fas fa-external-link-alt
 
 favicon = static/favicon.png
 
@@ -59,16 +64,64 @@ main_font = Source Serif Pro
 sans_font = Source Sans Pro
 mono_font = Inconsolata
 
-
 [library]
 
-# A list of filename and pattern pairs.
-save_patterns = d2l/mxnet.py, mxnet
-                d2l/torch.py, pytorch
-                d2l/tensorflow.py, tensorflow
+version_file = d2l/__init__.py
 
-version_file = d2lzh/__init__.py
+[library-mxnet]
 
+lib_file = d2l/mxnet.py
+lib_name = np
+
+# Map from d2l.xx to np.xx
+simple_alias = ones, zeros, arange, meshgrid, sin, sinh, cos, cosh, tanh,
+               linspace, exp, log, tensor -> array, normal -> random.normal,
+               matmul -> dot, int32, float32, concat -> concatenate, stack, abs
+
+# Map from d2l.xx(a, *args, **kwargs) to a.xx(*args, **kwargs)
+fluent_alias = numpy -> asnumpy, reshape, to -> as_in_context, reduce_sum -> sum,
+               argmax, astype
+
+alias =
+       size = lambda a: a.size
+       transpose = lambda a: a.T
+
+reverse_alias =
+       d2l.size\(([\w\_\d]+)\) -> \1.size
+       d2l.transpose\(([\w\_\d]+)\) -> \1.T
+
+[library-pytorch]
+
+lib_file = d2l/torch.py
+lib_name = torch
+
+simple_alias = ones, zeros, tensor, arange, meshgrid, sin, sinh, cos, cosh,
+               tanh, linspace, exp, log, normal, matmul, int32, float32,
+               concat -> cat, stack, abs
+
+fluent_alias = numpy -> detach().numpy, size -> numel, reshape, to,
+               reduce_sum -> sum, argmax, astype -> type, transpose -> t
+alias =
+
+reverse_alias =
+
+[library-tensorflow]
+
+lib_file = d2l/tensorflow.py
+lib_name = tf
+
+simple_alias = reshape, ones, zeros, meshgrid, sin, sinh, cos, cosh, tanh,
+               linspace, exp, matmul, reduce_sum, argmax, tensor -> constant,
+               arange -> range, astype -> cast, int32, float32, transpose,
+               concat, stack, normal -> random.normal, abs
+
+fluent_alias = numpy,
+
+alias =
+       size = lambda a: tf.size(a).numpy()
+
+reverse_alias =
+       d2l.size\(([\w\_\d]+)\) -> tf.size(\1).numpy()
 
 [deploy]
 
