--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ translator = aws
 
 # A list of wildcards to indicate the markdown files that need to be evaluated as
 # Jupyter notebooks.
-notebooks = *.md */index.md chapter_preliminaries/*.md
+notebooks = *.md */*.md
 
 # A list of files that will be copied to the build folder.
 resources = img/ d2lzh/ d2l.bib setup.py
