--- a/static/build.yml
+++ b/static/build.yml
@@ -5,9 +5,9 @@ dependencies:
     - ..  # d2l
     - git+https://github.com/d2l-ai/d2l-book
     - mxnet-cu101==1.6.0
-    - torchvision
+    - torchvision==0.7.0+cu101
     - -f https://download.pytorch.org/whl/torch_stable.html
-    - torch==1.5.1+cu101
-    - tensorflow
-    - tensorflow-probability
+    - torch==1.6.0+cu101
+    - tensorflow==2.2.0
+    - tensorflow-probability==0.10.1
     - cloudpickle==1.4.1  # due to https://github.com/tensorflow/probability/issues/991
